Try being tolerant of no pipeline-lib directory